sandbox/output
GildedRoseTest.java:410: error: cannot find symbol
            .map(GildedRose.generateUpdatedConjured());
                           ^
  symbol:   method generateUpdatedConjured()
  location: class GildedRose
1 error
